agregada funcionalidad cargar imagen en persona

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-#Ambientes de prueba
+#Ambiente de desarrollo
 #spring.datasource.url=jdbc:mysql://localhost:3306/dbportfoliojmc?useSSL=false&serverTimezone=UTC
 #spring.datasource.username=root
 #spring.datasource.password=
